<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_movie"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/tabmovie" />

    <item
        android:id="@+id/nav_tv"
        android:icon="@drawable/ic_baseline_tv_24"
        android:title="@string/tabtv" />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite" />

</menu>